tree-sitter-usfm/grammar.js
    bookcode: $ => choice("GEN", "EXO", "LEV", "NUM", "DEU", "JOS", "JDG",
              "RUT", "1SA", "2SA", "1KI", "2KI", 
              "1CH", "2CH", "EZR", "NEH", "EST", "JOB", "PSA", "PRO", 
              "ECC", "SNG", "ISA", "JER", "LAM", "EZK", "DAN", 
              "HOS", "JOL", "AMO", "OBA", "JON", "MIC", "NAM", "HAB", 
              "ZEP", "HAG", "ZEC", "MAL", "MAT", "MRK", "LUK", 
              "JHN", "ACT", "ROM", "1CO", "2CO", "GAL", "EPH", "PHP", 
              "COL", "1TH", "2TH", "1TI", "2TI", "TIT", "PHM", 
              "HEB", "JAS", "1PE", "2PE", "1JN", "2JN", "3JN", "JUD", 
              "REV", "TOB", "JDT", "ESG", "WIS", "SIR", "BAR", 
              "LJE", "S3Y", "SUS", "BEL", "1MA", "2MA", "3MA", "4MA", 
              "1ES", "2ES", "MAN", "PS2", "ODA", "PSS", "EZA", 
              "5EZ", "6EZ", "DAG", "PS3", "2BA", "LBA", "JUB", "ENO", 
              "1MQ", "2MQ", "3MQ", "REP", "4BA", "LAO", "FRT", 
              "BAK", "OTH", "INT", "CNC", "GLO", "TDX", "NDX"),
    text: $ => /[^\\\|]+/,
    _spaceOrLine: $ => /[\s\n\r]/,

    // File Identification
    bookIdentification: $ => $.idMarker, //only at start of file
    idMarker: $ => prec.right(0, seq("\\id ", $.bookcode, optional($.text))),


    // Headers
    hBlock: $ => prec.right(0,seq(repeat1($.hMarker), optional($.tocBlock), optional($.tocaBlock))),
    hMarker: $ => seq($._hTag, $.text),
    _hTag: $ => seq("\\h",optional(token.immediate(/[123]/)), " "),
    verseText: $ => prec.right(0, repeat1(choice($.text,
      $._characterMarker,
      ))),
    vMarker: $ => prec.right(0,seq("\\v ", $.verseNumber, repeat($._verseMeta))),
    verseNumber: $ => /\d+\w?(-\d+\w?)?[\s\n\r]/,

    _verseMeta: $ => choice(
      $.vaMarker,
      $.vpMarker,
    ),
    vaMarker: $ => seq("\\va ", $.verseNumber, "\\va*", $._spaceOrLine),
    vpMarker: $ => seq("\\vp ", $.text, "\\vp*", $._spaceOrLine),

    // chapter and contents
    chapter: $ => prec.right(0,seq(
        optional($.clMarker),
        $.cMarker,
        repeat($._chapterContent)
      )),
    cMarker: $ => seq("\\c ", $.chapterNumber),
    chapterNumber: $ => /\d+/,

    _chapterContent: $ => choice(
      $._chapterMeta,
      $._title,
      $._paragraph,
      $._comments,
      $._poetry,
      $.table,
      $.list,
      $.footnote,
    ),

    //chapter meta
    clMarker: $ => seq("\\cl ", $.text),
    caMarker: $ => seq("\\ca ", $.chapterNumber, "\\ca*"),
    cpMarker: $ => seq("\\cp ", $.text),
    sBlock: $ => prec.right(0, repeat1($.sMarker)),
    sMarker: $ => prec.right(0, seq($._sTag, repeat(choice($.text,
      $.footnote, $.crossref, 
      $._characterMarker      
      )), optional($.srMarker), optional($.rMarker))),
    _sTag: $ => seq("\\s",optional(token.immediate(/[12345]/)), " "),
    rMarker: $ => seq("\\r ", $.text), // ocurs under c too

    _paragraphContent: $ => choice(
      $.vMarker,
      $.verseText,
      $.footnote, 
      $.crossref,
    ),

    pMarker: $ => prec.right(0, seq("\\p", $._spaceOrLine, repeat($._paragraphContent))),
    pmMarker: $ => prec.right(0, seq("\\pm", $._spaceOrLine, repeat($._paragraphContent))),
    bMarker: $ => seq("\\b", $._spaceOrLine),

    //quotes
    list: $ => prec.right(0, seq(optional($.lhMarker), repeat1($._listMarker), optional($.lfMarker))),

    lhMarker: $ => prec.right(0, seq("\\lh", $._spaceOrLine, repeat($._paragraphContent))),
    lfMarker: $ => prec.right(0, seq("\\lf", $._spaceOrLine, repeat($._paragraphContent))),
    _listMarker: $ => choice( $.liBlock, $.limBlock ), 
    liBlock: $ => prec.right(0, repeat1($.liMarker)),
    liMarker: $ => prec.right(0, seq($._liTag, repeat(choice(
      $._paragraphContent,
      $._listTextContent,
      )))),
    _liTag: $ => seq("\\li",optional(token.immediate(/[1234]/)), $._spaceOrLine),
    limBlock: $ => prec.right(0, repeat1($.limMarker)),
    limMarker: $ => prec.right(0, seq($._limTag, repeat(choice(
        $._paragraphContent,
        $._listTextContent,)
      ))
    ),
    _limTag: $ => seq("\\lim",optional(token.immediate(/[1234]/)), $._spaceOrLine),
    livMarker: $ => prec.right(0, seq($._livTag, $._spaceOrLine, repeat(choice($.verseText,
      )), $._livTag, token.immediate("*") )),
    _livTag: $ => prec.right(0,seq("\\liv",optional(token.immediate(/[12345]/)))),
    likMarker: $ => seq("\\lik ", $.verseText, "\\lik*"),
    litlMarker: $ => seq("\\litl ", $.verseText, "\\litl*"),

    _listTextContent: $ => choice(
      $.likMarker,
      $.livMarker,
      $.litlMarker
    ),

    //Table
    caller: $ => /[^\s\\]/,
    noteText: $ => prec.right(0, repeat1(choice($.text,
      $._nestedCharacterMarker,
      ))),

    footnote: $ => choice($.fMarker, $.feMarker, $.fmMarker),

    fMarker: $ => seq("\\f ",$.caller, repeat($._footnoteContents), "\\f*"),
    frMarker: $ => seq("\\fr ", $.noteText, optional("\\fr*")),
    fqMarker: $ => seq("\\fq ", $.noteText, optional("\\fq*")),
    fkMarker: $ => seq("\\fk ", $.noteText, optional("\\fk*")),
    fwMarker: $ => seq("\\fw ", $.noteText, optional("\\fw*")),
    ftMarker: $ => seq("\\ft ", $.noteText, optional("\\ft*")),
    fdcMarker: $ => seq("\\fdc ", $.noteText, optional("\\fdc*")),
    _footnoteContents: $ => choice(
      $.frMarker,
      $.fqMarker,
      $.fqaMarker,
      $.fkMarker,
      $.flMarker,
      $.fwMarker,
      $.fpMarker,
      $.ftMarker,
      $.fdcMarker,
      $.fvMarker,
      $.noteText,
      $.xtMarker
    ),

    //Cross-reference
    _characterMarker: $ => choice(
      $.addMarker,
      $.bkMarker,
      $.dcMarker,
      $.kMarker,
      $.ndMarker,
      $.ordMarker,
      $.pnMarker,
      $.pngMarker,
      $.addpnMarker,
      $.qtMarker,
      $.sigMarker,
      $.slsMarker,
      $.tlMarker,
      $.wjMarker,
      $.emMarker,
      $.bdMarker,
      $.itMarker,
      $.bditMarker,
      $.noMarker,
      $.scMarker,
      $.supMarker,
      $.ndxMarker,
      $.proMarker,
      $.rbMarker,
      $.wMarker,
      $.wgMarker,
      $.whMarker,
      $.waMarker,
      $.jmpMarker,
      $.figMarker,
    ),

    _nestedCharacterMarker: $ => choice(
      $.addNested,
      $.bkNested,
      $.dcNested,
      $.kNested,
      $.ndNested,
      $.ordNested,
      $.pnNested,
      $.pngNested,
      $.addpnNested,
      $.qtNested,
      $.sigNested,
      $.slsNested,
      $.tlNested,
      $.wjNested,
      $.emNested,
      $.bdNested,
      $.itNested,
      $.bditNested,
      $.noNested,
      $.scNested,
      $.supNested,
      $.ndxNested,
      $.proNested,
      $.rbNested,
      $.wNested,
      $.wgNested,
      $.whNested,
      $.waNested,
      $.jmpNested,
    ),
