tree-sitter-usfm/test/corpus/test4_chapter_verse.txt
==========
id, c, v markers
==========
\id MAT some other info of file
\c 1
\p
\v 1 verse text
----------
(File 
  (bookIdentification 
    (idMarker (bookcode) (text))) 
  (chapter 
    (cMarker (chapterNumber)) 
    (pMarker 
      (vMarker (verseNumber)) 
      (verseText (text)))))

===========
cl markers
===========
\id GEN
\c 1
\cl chapter
\p 
\v 1 text
-----------
(File 
  (bookIdentification 
    (idMarker (bookcode) (text))) 
  (chapter 
    (cMarker (chapterNumber)) 
    (clMarker (text)) 
    (pMarker 
      (vMarker (verseNumber)) 
      (verseText (text)))))
===========
cl ca cp markers
===========
\id GEN
\h some header
\cl label before chapter
\c 1
\ca 2 \ca*
\cp i
\p
\v 1 text
\v 2 text again
-------------
(File 
  (bookIdentification 
    (idMarker (bookcode) (text))) 
  (hBlock (hMarker (text))) 
  (chapter 
    (clMarker (text)) 
    (cMarker (chapterNumber)) 
    (caMarker (chapterNumber)) 
    (cpMarker (text)) 
    (pMarker 
      (vMarker (verseNumber)) 
      (verseText (text)) 
      (vMarker (verseNumber)) 
      (verseText (text)))))

==============
verse number patterns
==============
\id GEN
\c 1
\p
\v 1 text
\v 2a text
\v 2b text
\v 3-4a text
\v 4b text
--------------
(File 
  (bookIdentification 
    (idMarker (bookcode) (text))) 
  (chapter 
    (cMarker (chapterNumber)) 
    (pMarker 
      (vMarker (verseNumber)) 
      (verseText (text)) 
      (vMarker (verseNumber)) 
      (verseText (text)) 
      (vMarker (verseNumber)) 
      (verseText (text)) 
      (vMarker (verseNumber)) 
      (verseText (text)) 
      (vMarker (verseNumber)) 
      (verseText (text)))))
===========
va vp markers
===========
\id GEN
\c 1
\p 
\v 1 text - text
\v 2 \va 1a \va* text
\v 3 \va 2 \va*   \vp I-I \vp* text
\v 3 \va 2 \va* \va 2b \va* text
\v 4 \vp I-I \vp* text
------------
(File 
  (bookIdentification 
    (idMarker (bookcode) (text))) 
  (chapter 
    (cMarker (chapterNumber)) 
    (pMarker 
      (vMarker (verseNumber)) 
      (verseText (text)) 
      (vMarker (verseNumber) (vaMarker (verseNumber))) 
      (verseText (text)) 
      (vMarker (verseNumber) (vaMarker (verseNumber)) (vpMarker (text))) 
      (verseText (text)) 
      (vMarker (verseNumber) (vaMarker (verseNumber)) (vaMarker (verseNumber))) 
      (verseText (text)) 
      (vMarker (verseNumber) (vpMarker (text))) (verseText (text)))))
