tree-sitter-usfm/test/corpus/test8_footnotes_n_crossrefs.txt
==========
A basic footnote usage
==========
\id GEN
\c 1
\s1 The Preaching of John the Baptist
\r (Matthew 3.1-12; Luke 3.1-18; John 1.19-28)
\p
\v 1 This is the Good News about Jesus Christ, the Son of God. \f + \fr 1.1: \ft Some
manuscripts do not have \fq the Son of God.\f*
-----------
(File 
	(bookIdentification (idMarker (bookcode) (text))) 
	(chapter 
		(cMarker (chapterNumber)) 
		(sBlock (sMarker (text) (rMarker (text)))) 
		(pMarker 
			(vMarker (verseNumber)) 
			(verseText (text)) 
			(footnote 
				(fMarker (caller) (noteText (text)) (frMarker (noteText (text))) (ftMarker (noteText (text))) (fqMarker (noteText (text)))))
		)
	)
)
============
Another footnote
============
\id GEN
\c 1
\p
\v 20 Adam \f + \fr 3.20: \fk Adam: \ft This name in Hebrew means “all human beings.”\f*
named his wife Eve, \f + \fr 3.20: \fk Eve: \ft This name sounds similar to the Hebrew
word for “living,” which is rendered in this context as “human beings.”\f* because she
was the mother of all human beings.
------------
(File 
	(bookIdentification (idMarker (bookcode) (text))) 
	(chapter 
		(cMarker (chapterNumber)) 
		(pMarker 
			(vMarker (verseNumber)) 
			(verseText (text)) 
			(footnote (fMarker (caller) (noteText (text)) (frMarker (noteText (text))) (fkMarker (noteText (text))) (ftMarker (noteText (text))))) 
			(verseText (text)) 
			(footnote (fMarker (caller) (noteText (text)) (frMarker (noteText (text))) (fkMarker (noteText (text))) (ftMarker (noteText (text)))))
			(verseText (text)))))
=============
Footnotes with unusual callers
=============
\id GEN
\c 1
\p
\v 3 Él es el resplandor glorioso de Dios,\f c \fr 1.3: \fk Resplandor: \ft Cf.
Jn 1.4-9,14\fdc ; también Sab 7.25-26, donde algo parecido se dice de la sabiduría.\f*
la imagen misma de lo que Dios es y el que sostiene todas las cosas con su palabra
poderosa. Después de limpiarnos de nuestros pecados, se ha sentado en el cielo, a la
derecha del trono de Dios,
\v 4 y ha llegado a ser superior a los ángeles, pues ha recibido en herencia un título
mucho más importante que el de ellos. \f ⸀ \fr 28,14 \ft υπο \fw B D 0148. 892\f*
\v 3 \f ° \fr 4,1 \fw B Δ 700\f*
-----------
(File 
	(bookIdentification (idMarker (bookcode) (text))) 
	(chapter 
		(cMarker (chapterNumber)) 
		(pMarker 
			(vMarker (verseNumber)) 
			(verseText (text)) 
			(footnote (fMarker (caller) (noteText (text)) (frMarker (noteText (text))) (fkMarker (noteText (text))) (ftMarker (noteText (text))) (fdcMarker (noteText (text))))) 
			(verseText (text)) 
			(vMarker (verseNumber)) 
			(verseText (text)) 
			(footnote (fMarker (caller) (noteText (text)) (frMarker (noteText (text))) (ftMarker (noteText (text))) (fwMarker (noteText (text))))) 
			(verseText (text)) 
			(vMarker (verseNumber)) 
			(footnote (fMarker (caller) (noteText (text)) (frMarker (noteText (text))) (fwMarker (noteText (text))))))))
================
Footnote in new line
================
\id GEN
\c 1
\p
\v 27 Can any of you live a bit longer
\f + \fr 6.27: \fq live a bit longer; \ft or \fq grow a bit taller.\f* by worrying about it?
----------------
(File 
	(bookIdentification (idMarker (bookcode) (text))) 
	(chapter 
		(cMarker (chapterNumber)) 
		(pMarker 
			(vMarker (verseNumber)) 
			(verseText (text)) 
			(footnote (fMarker (caller) (noteText (text)) (frMarker (noteText (text))) (fqMarker (noteText (text))) (ftMarker (noteText (text))) (fqMarker (noteText (text))))) 
			(verseText (text)))))

